<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/LOG_LinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/llMainCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mcvBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/background_image_spring" />

        <ScrollView
            android:id="@+id/mcvScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/mcvLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/llLogoImageView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="100dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/MAINllLogoImageView"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/llArrowImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/MAINllArrowImageView"
                    app:srcCompat="@drawable/arrow_down_white" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/llConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="300dp" >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/llInputFieldCardView"
                        android:layout_width="350dp"
                        android:layout_height="500dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHeight_percent="0.6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.8"
                        android:background="@color/background" >

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/ifcvConstraintLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" >


                            <Button
                                android:id="@+id/LOGifcvRegisterButton"
                                android:layout_width="255dp"
                                android:layout_height="65dp"
                                android:backgroundTint="@color/white"
                                android:drawableLeft="@drawable/white_subtle_border"
                                android:text="@string/MAINifcvRegisterButton"
                                android:textSize="20sp"
                                app:cornerRadius="5dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHeight_percent="0.15"
                                app:layout_constraintHorizontal_bias="0.505"
                                app:layout_constraintStart_toStartOf="parent"

                                app:layout_constraintTop_toBottomOf="@+id/LOGifcvLoginButton"
                                app:layout_constraintVertical_bias="0.0"
                                app:layout_constraintWidth_percent="0.3" />

                            <Button
                                android:id="@+id/LOGifcvLoginButton"
                                android:layout_width="255dp"
                                android:layout_height="65dp"
                                android:backgroundTint="@color/background"
                                android:drawableLeft="@drawable/white_subtle_border"
                                android:text="@string/MAINifcvLoginButton"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                app:cornerRadius="5dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHeight_percent="0.15"
                                app:layout_constraintHorizontal_bias="0.505"

                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/LOGifcvForgotPasswordText"
                                app:layout_constraintVertical_bias="0.256"
                                app:layout_constraintWidth_percent="0.3" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/ifcvPasswordTextInputLayout"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintHorizontal_bias="0.16"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.455"
                                app:passwordToggleEnabled="true"
                                app:errorEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tilPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/black"

                                    android:inputType="textPassword"
                                    android:textColor="@color/black"
                                    android:hint="@string/MAINtilPassword" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/ifcvEmailTextInputLayout"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="250dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintHorizontal_bias="0.16"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.488"
                                app:errorEnabled="true"
                                app:hintEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/tilEmail"
                                    android:layout_width="250dp"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/black"

                                    android:inputType="text"
                                    android:textColor="@color/black"
                                    android:hint="@string/MAINtilEmail" />


                            </com.google.android.material.textfield.TextInputLayout>

                            <TextView
                                android:id="@+id/LOGifcvForgotPasswordText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.922"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/ifcvPasswordTextInputLayout"
                                app:layout_constraintVertical_bias="0.07"
                                android:padding="5dp"
                                android:background="@color/gray"

                                android:textColor="@color/white"
                                android:text="@string/MAINifcvForgotPasswordText" />

                            <CheckBox
                                android:id="@+id/ifcvRememberCheckbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.094"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.606"

                                android:text="@string/MAINifcvRememberCheckbox"
                                />

                            <TextView
                                android:id="@+id/ifcvTitleText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.102"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.061"

                                android:textSize="32sp"
                                android:text="@string/MAINifcvTitleText"
                                />

                            <ImageView
                                android:id="@+id/ifcvCheckBoxEmailImage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toTopOf="@+id/ifcvCheckBoxPasswordImage"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/ifcvEmailTextInputLayout"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.535"
                                android:contentDescription="@string/MAINifcvCBEmailImage"
                                app:srcCompat="@drawable/checkmark_black" />

                            <ImageView
                                android:id="@+id/ifcvCheckBoxPasswordImage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toTopOf="@+id/LOGifcvForgotPasswordText"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/ifcvPasswordTextInputLayout"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.797"
                                android:contentDescription="@string/MAINifcvCBPasswordlImage"
                                app:srcCompat="@drawable/checkmark_black" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/llVersionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"

                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/MAINllVersionTextView"/>

                <TextView
                    android:id="@+id/llInfoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/MAINllInfoTextView"/>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>